chore: refactor